<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stphanie.game3.HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_hor60"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_vert50"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tvAlch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_skill_alch"
        android:textSize="22dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_hor60"
        app:layout_constraintRight_toLeftOf="@+id/guide_vert50"/>

    <TextView
        android:id="@+id/tvElm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_skill_elm"
        android:textSize="22dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlch"
        app:layout_constraintRight_toLeftOf="@+id/guide_vert50"/>

    <TextView
        android:id="@+id/tvArc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_skill_arc"
        android:textSize="22dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvElm"
        app:layout_constraintRight_toLeftOf="@+id/guide_vert50"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAlchValue"
        android:text="@string/label_XX"
        android:textSize="22dp"
        app:layout_constraintTop_toTopOf="@+id/tvAlch"
        app:layout_constraintLeft_toRightOf="@id/guide_vert50"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvElmValue"
        android:text="@string/label_XX"
        android:textSize="22dp"
        app:layout_constraintTop_toTopOf="@+id/tvElm"
        app:layout_constraintLeft_toRightOf="@id/guide_vert50"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvArcValue"
        android:text="@string/label_XX"
        android:textSize="22dp"
        app:layout_constraintTop_toTopOf="@+id/tvArc"
        app:layout_constraintLeft_toRightOf="@id/guide_vert50"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAlchProgress"
        android:text="@string/label_XX"
        android:textSize="22dp"
        app:layout_constraintTop_toTopOf="@+id/tvAlch"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvElmProgress"
        android:text="@string/label_XX"
        android:textSize="22dp"
        app:layout_constraintTop_toTopOf="@+id/tvElm"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvArcProgress"
        android:text="@string/label_XX"
        android:textSize="22dp"
        app:layout_constraintTop_toTopOf="@+id/tvArc"
        app:layout_constraintRight_toRightOf="parent"/>




</android.support.constraint.ConstraintLayout>
