<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_green"
    tools:context="com.example.stphanie.game3.BattleActivity">

    <TextView
        android:id="@+id/tv_battleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_vert_50"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <android.support.constraint.Guideline
        android:id="@+id/gl_vert_8"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_vert_25"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_vert_42"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_vert_58"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.58" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_vert_75"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_vert_92"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_horz_20"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <android.support.constraint.Guideline
        android:id="@+id/gl_horz_60"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>


    <ProgressBar
        android:id="@+id/hpBarPlayer"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/img_battlePlayer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/gl_vert_50" />

    <ImageView
        android:id="@+id/img_battlePlayer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="2dp"
        android:scaleType="fitEnd"
        android:src="@drawable/green_diamond"
        android:layout_margin="10dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/gl_vert_50"
        app:layout_constraintTop_toTopOf="@+id/gl_horz_20"
        app:layout_constraintBottom_toTopOf="@+id/gl_horz_60"/>

    <ImageView
        android:id="@+id/img_battleEnemy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="2dp"
        android:scaleType="fitEnd"
        android:src="@drawable/red_diamond"
        android:layout_margin="10dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintLeft_toRightOf="@id/gl_vert_50"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_horz_20"
        app:layout_constraintBottom_toTopOf="@+id/gl_horz_60"/>

    <ProgressBar
        android:id="@+id/hpBarEnemy"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toRightOf="@id/gl_vert_50"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/img_battleEnemy" />

    <Button
        android:id="@+id/bt_go"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:onClick="onGoClick"
        android:layout_marginRight="20dp"
        android:text="@string/bt_go"
        android:padding="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonshape"
        app:layout_constraintBottom_toTopOf="@+id/iv_skillholder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        android:src="@drawable/skillholder"
        android:id="@+id/iv_skillholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tv_skillDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorTranspGrey"
        android:text="@string/battle_selectedSkillDescr"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <ImageView
        android:id="@+id/img_skill1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/yellow_triangle"
        app:layout_constraintLeft_toRightOf="@id/gl_vert_8"
        app:layout_constraintRight_toLeftOf="@id/gl_vert_25"
        app:layout_constraintBottom_toTopOf="@+id/tv_skillDescription"/>

    <ImageView
        android:id="@+id/img_skill2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:src="@drawable/yellow_triangle"
        app:layout_constraintLeft_toRightOf="@id/gl_vert_25"
        app:layout_constraintRight_toLeftOf="@id/gl_vert_42"
        app:layout_constraintBottom_toTopOf="@+id/tv_skillDescription"/>

    <ImageView
        android:id="@+id/img_skill3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:src="@drawable/yellow_triangle"
        app:layout_constraintLeft_toRightOf="@id/gl_vert_42"
        app:layout_constraintRight_toLeftOf="@id/gl_vert_58"
        app:layout_constraintBottom_toTopOf="@+id/tv_skillDescription"/>

    <ImageView
        android:id="@+id/img_skill4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:src="@drawable/yellow_triangle"
        app:layout_constraintLeft_toRightOf="@id/gl_vert_58"
        app:layout_constraintRight_toLeftOf="@id/gl_vert_75"
        app:layout_constraintBottom_toTopOf="@+id/tv_skillDescription"/>

    <ImageView
        android:id="@+id/img_skill5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:src="@drawable/yellow_triangle"
        app:layout_constraintLeft_toRightOf="@id/gl_vert_75"
        app:layout_constraintRight_toLeftOf="@id/gl_vert_92"
        app:layout_constraintBottom_toTopOf="@+id/tv_skillDescription"/>




</android.support.constraint.ConstraintLayout>
